--- a/index.css
+++ b/index.css
@@ -163,3 +163,22 @@ body{
   .carousel-item:hover .carousel-item__details{
       opacity: 1;
   }
+  .footer{
+    padding: 1em;
+    margin-top: 3em;
+    width: 100%;
+    height: 200px;
+    box-shadow: 0 0 20px 2px rgb(212, 212, 212);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer a{
+    text-decoration: none;
+    margin-top: 1em;
+    color: rgb(97, 97, 97);
+}
+.footer a:hover{
+    text-decoration: underline;
+}
